--- a/app/globals.css
+++ b/app/globals.css
@@ -89,12 +89,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: linear-gradient(to bottom, rgba(34, 33, 43, 0), rgb(41, 33, 49));
 }
 
 a {
