--- a/app/page.module.css
+++ b/app/page.module.css
@@ -149,31 +149,22 @@ display: flex;
   display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
   border: 1px solid white;
-  border-radius: 10px;
-  overflow: clip;
-}
-
-.proimage {
-  height: 400px;
-  width: 400px;
 }
 
 .proInfo {
-  height: auto;
-  width: 400px;
-  display: inline;
-  text-align: center;
-  align-content: center;
-  background: transparent;
-  backdrop-filter: blur(5px);
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+  display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  padding: 2rem;
+  margin: 0 auto;
+  width: 500px;
 }
 
 
-@media (max-width: 475px){
+@media (max-width: 500px){
   .aboutMe {
     padding: 2rem;
     margin: 0 auto;
@@ -189,11 +180,12 @@ display: flex;
   }
 
   .proCard{
-    flex-direction: column;
   }
 
   .proInfo {
-    height: 100px;
+    margin: 0;
+    padding: 0;
+    width: inherit;
   }
   
 }
