--- a/app/page.module.css
+++ b/app/page.module.css
@@ -85,6 +85,10 @@ display: flex;
   font-size: 1.2em; /* Adjust font size as needed */
 }
 
+.threeCanvas {
+  position: relative;
+}
+
 .aboutSection, .projectsSection {
   color: white;
   margin: 0 auto 4rem;
@@ -103,8 +107,14 @@ display: flex;
   display: flex;
     flex-direction: column;
   padding: 2rem;
-  margin: 0 auto;
+  margin: 0 5%;
   width: 500px;
+}
+
+.imgHolder {
+  height: 500px;
+  width: 500px;
+  border: 1px solid white;
 }
 
 .infoTabs {
@@ -133,16 +143,46 @@ display: flex;
 }
 
 .skillBlocks {
+  margin: 2rem;
+}
+
+.skillBlocks  ul{
+  margin: 0 auto;
+  display: grid;
+    gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+
+.skillBlocks ul li {
+  list-style: none;
+  border: 1px solid white;
+  padding: 1rem;
+  border-radius: 15px;
+}
+
+.educationBlocks {
+  width: 60vw;
+  max-width: 800px;
+  margin: 0 auto;
+    display: grid;
+    gap: 1rem;
+    grid-template-rows: repeat(1, 1fr);
+}
+
+.educationBlocks dl {
   display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  margin: 2rem;
+  padding: .5rem 0;
+  border: 1px solid white;
+  border-radius: 15px;
 }
 
-.skillBlocks  li{
- 
-}
-
-.skillBlocks ul {
-  list-style: none;
+.educationBlocks dl * {
+  margin: .5rem;
 }
 
 .proCard {
@@ -160,7 +200,7 @@ display: flex;
     align-items: flex-start;
   padding: 2rem;
   margin: 0 auto;
-  width: 500px;
+  width: 50%;
 }
 
 
@@ -171,13 +211,40 @@ display: flex;
     width: 350px;
   }
 
+  .imgHolder {
+    width: 300px;
+  }
+
   .infoTabs {
     width: 100%;
     margin: 0;
   }
+  
 
-  .skillBlocks {
+  .skillBlocks ul{
+    grid-template-columns: repeat(1, 1fr);
   }
+
+    .educationBlocks {
+      margin: 0 auto;
+      display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .educationBlocks dl {
+      display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .educationBlocks dl * {
+      margin: .5rem;
+    }
+
+    .educationBlocks dd {
+      text-align: center;
+     }
 
   .proCard{
   }
