created a form section
-needs the email to be connected to it
-may need some fixes

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -243,6 +243,17 @@ display: flex;
   visibility: visible;
 }
 
+.form {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contactSection {
+  background-color: white;
+}
+
 
 
 @media (max-width: 500px){
