--- a/app/page.module.css
+++ b/app/page.module.css
@@ -165,9 +165,7 @@ display: flex;
 
 .skillBlocks ul li {
   list-style: none;
-  border: 1px solid white;
   padding: 1rem;
-  border-radius: 15px;
 }
 
 .educationBlocks {
@@ -285,6 +283,11 @@ display: flex;
   z-index: 9;
 }
 
+.galleryImage {
+  width: 400px;
+  height: auto;
+}
+
 .imgGallery {
  display: flex;
  flex-direction: row;
@@ -315,14 +318,33 @@ display: flex;
 }
 
 .form {
-  width: 50vw;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 800px;
+}
+
+.formContainer {
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.submitButton {
+  color: white;
+  border-color: white;
+  margin: .5rem;
+}
+
+.textField {
+  background-color: white;
+  margin: .5rem;
 }
 
 .contactSection {
-  background-color: white;
+
 }
 
 
