--- a/app/globals.css
+++ b/app/globals.css
@@ -79,6 +79,7 @@
 }
 
 * {
+  color: #F7F7E5;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -95,9 +96,35 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background-image: linear-gradient(to bottom, rgba(34, 33, 43, 0), rgb(41, 33, 49));
+  /* Set the background color */
+  background-color: #7996A1;
+  /* Ensure the body fills the viewport */
+  min-height: 100vh;
+  margin: 0;
+  /* Position the body relatively for absolute positioning of pseudo-elements */
+  position: relative;
 }
+
+/* Create two pseudo-elements to overlay noise texture */
+body::before,
+body::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: '';
+  width: 100%;
+  height: 100%;
+  z-index: 1; /* Ensure pseudo-elements are below the content */
+  opacity: 0.3; /* Adjust opacity as needed */
+  /* Apply noise texture using SVG filter */
+  background: #7996A1 url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240"><filter id="noiseFilter"><feTurbulence type="fractalNoise" baseFrequency="0.03" numOctaves="3" /></filter><rect width="100%" height="100%" filter="url(%23noiseFilter)" /></svg>') center/cover fixed;
+}
+
+/* Ensure one pseudo-element is positioned behind the content and the other in front */
+body::before {
+  z-index: -1;
+}
+
 
 a {
   color: inherit;
