--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,7 +4,9 @@
   font-family: "Rubik Mono One", monospace;
     font-weight: 400;
     font-style: normal;
-    font-size: 72px;
+    font-size: 50px;
+    text-align: left;
+    margin: ;
 }
 
 .main {
